Workspace sync